# coproduct-opensource_nucleus

./: .gitignore  .verus-version  Cargo.toml  README.md  STABILITY.md  action.yml
.github/workflows/: coverage-matrix.yml  docker.yml  kani-nightly.yml  release.yml  verus.yml
blog/: 2026-09-01-vibe-security-formally-verified-agent-runtime.md
crates/lattice-guard/: Cargo.toml
crates/lattice-guard-verified/: Cargo.toml
crates/lattice-guard-verified/src/: lib.rs
crates/lattice-guard/src/: certificate.rs  guard.rs  lib.rs
crates/lattice-guard/tests/: certificate_tests.rs  verus_conformance.rs
crates/nucleus-audit/src/: tool_pattern.rs
crates/nucleus-cli/: Cargo.toml
crates/nucleus-cli/src/: main.rs  observe.rs  profiles.rs  run.rs  shell.rs
crates/nucleus-identity/: Cargo.toml
crates/nucleus-mcp/: Cargo.toml
crates/nucleus-mcp/src/: main.rs
crates/nucleus-node/: Cargo.toml
crates/nucleus-node/proto/: nucleus_node.proto
crates/nucleus-node/src/: main.rs
crates/nucleus-sdk/src/: node.rs
crates/nucleus-spec/: Cargo.toml
crates/nucleus-spec/src/: lib.rs
crates/nucleus-tool-proxy/: Cargo.toml
crates/nucleus-tool-proxy/src/: cert_bridge.rs  main.rs  mcp.rs  unicode_audit.rs
crates/nucleus-tool-proxy/tests/: red_team_harness.rs  roguepilot_integration.rs
crates/portcullis/: Cargo.toml
crates/portcullis-verified/src/: lib.rs
crates/portcullis/profiles/: doc-editor.yaml  (+3 more)
docker/: Dockerfile.tool-proxy-slim
docs/assurance/: hardening-checklist.md
examples/ctf-exfil/: README.md  flag.txt
scripts/: action-entrypoint.sh
(+34 files in other folders)
