[package]
name = "lattice-guard-verified"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Formally verified lattice proofs for lattice-guard (Verus SMT proofs)"
repository = "https://github.com/coproduct-opensource/nucleus"
publish = false

# This crate is verified with Verus, not compiled with standard cargo.
# Run: cargo verus verify -p lattice-guard-verified
# Or:  .verus/verus-x86-macos/verus crates/lattice-guard-verified/src/lib.rs

[dependencies]
vstd = { path = "../../.verus/verus-x86-macos/vstd" }
